# trisqr

./: .gitignore  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Parser.cpp  Parser.h  README.md  Token.cpp  Token.h  interpreter_tests.cpp  lexer.cpp  lexer.h  lexer_error_types.h  lexer_tests.cpp  main.cpp  notatki z TKOM.txt  parser.cpp  parser.h  parser_basic.trisqr  parser_condition_tests.trisqr  parser_test.trisqr  parser_tests.cpp
ErrorHandler/: ErrorHandler.cpp  ErrorHandler.h
Examples/: example_program.trisqr  example_program.trsqr  fibonacci.trisqr  parser_basic.trisqr  test.trisqr  triangles.trisqr
Lexer/: Token.cpp  Token.h  lexer.cpp  lexer.h  lexer_error_types.h  position.h
Parser/: Parser.cpp  Parser.h
Program/: Program.cpp  Program.h  Visitable.cpp  Visitable.h  Visitator.cpp  Visitator.h  Visitor.h  VisitorInterpreter.cpp  VisitorInterpreter.h  VisitorSemantic.cpp  VisitorSemantic.h  VisitorTree.cpp  VisitorTree.h
Tests/: interpreter_tests.cpp  lexer_tests.cpp  parser_condition_tests.trisqr  parser_tests.cpp  semantic_hell.trisqr
Visitors/: Visitor.cpp  Visitor.h  VisitorInterpreter.cpp  VisitorInterpreter.h  VisitorSemantic.cpp  VisitorSemantic.h  VisitorTree.cpp
